[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/player/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 8 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIconContainer" type="HBoxContainer" parent="CanvasLayer/PlayerUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -30.0
margin_right = 168.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
